<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/bt_divi"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#000000"
        android:text="@string/bt_divisao"
        android:textColor="#FF5722"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_percent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/bt_percent"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#000000"
        android:text="@string/bt_mod"
        android:textColor="#FF5722"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_nove"
        app:layout_constraintEnd_toStartOf="@+id/bt_divi"
        app:layout_constraintStart_toEndOf="@+id/bt_nsei"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/bt_nsei"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:textColor="#FF5722"
        app:icon="@drawable/abc_vector_test"
        app:iconPadding="14dp"
        app:iconTint="#ff5722"
        app:layout_constraintBottom_toTopOf="@+id/bt_sete"
        app:layout_constraintEnd_toStartOf="@+id/bt_percent"
        app:layout_constraintStart_toEndOf="@+id/bt_limpar"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_limpar"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:text="@string/bt_limpar"
        android:textColor="#FF5722"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_sete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/bt_nove"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="7dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_nove"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_seis"
        app:layout_constraintEnd_toStartOf="@+id/bt_mult"
        app:layout_constraintStart_toEndOf="@+id/bt_oito"
        app:layout_constraintTop_toBottomOf="@+id/bt_percent" />

    <Button
        android:id="@+id/bt_oito"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="7dp"
        android:background="#000000"
        android:backgroundTint="#040303"
        android:text="@string/Bt_oito"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_cinco"
        app:layout_constraintEnd_toStartOf="@+id/bt_nove"
        app:layout_constraintStart_toEndOf="@+id/bt_sete"
        app:layout_constraintTop_toBottomOf="@+id/bt_percent" />

    <Button
        android:id="@+id/bt_sete"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_sete"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_limpar" />

    <Button
        android:id="@+id/bt_mult"
        android:layout_width="105dp"
        android:layout_height="61dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#000000"
        android:text="@string/bt_multiplica"
        android:textColor="#FF5722"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_menos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_nove"
        app:layout_constraintTop_toBottomOf="@+id/bt_divi" />

    <Button
        android:id="@+id/bt_menos"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#000000"
        android:text="@string/bt_subtracao"
        android:textColor="#FF5722"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_mais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_seis"
        app:layout_constraintTop_toBottomOf="@+id/bt_mult" />

    <Button
        android:id="@+id/bt_seis"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_seis"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_tres"
        app:layout_constraintEnd_toStartOf="@+id/bt_menos"
        app:layout_constraintStart_toEndOf="@+id/bt_cinco"
        app:layout_constraintTop_toBottomOf="@+id/bt_nove" />

    <Button
        android:id="@+id/bt_cinco"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_crinco"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_dois"
        app:layout_constraintEnd_toStartOf="@+id/bt_seis"
        app:layout_constraintStart_toEndOf="@+id/bt_quatro"
        app:layout_constraintTop_toBottomOf="@+id/bt_oito" />

    <Button
        android:id="@+id/bt_quatro"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_quatro"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_sete" />

    <Button
        android:id="@+id/bt_igual"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:background="#FF5722"
        android:backgroundTint="#FF5722"
        android:text="@string/bt_igual"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_mais" />

    <Button
        android:id="@+id/bt_ponto"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:text="@string/bt_ponto"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_zero"
        android:layout_width="91dp"
        android:layout_height="54dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="12dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_0"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_um"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_um"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_quatro" />

    <Button
        android:id="@+id/bt_dois"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginBottom="11dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_dois"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_zero"
        app:layout_constraintEnd_toStartOf="@+id/bt_tres"
        app:layout_constraintStart_toEndOf="@+id/bt_um"
        app:layout_constraintTop_toBottomOf="@+id/bt_cinco" />

    <Button
        android:id="@+id/bt_tres"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginBottom="11dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:text="@string/Bt_tres"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_ponto"
        app:layout_constraintEnd_toStartOf="@+id/bt_mais"
        app:layout_constraintStart_toEndOf="@+id/bt_dois"
        app:layout_constraintTop_toBottomOf="@+id/bt_seis" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="401dp" />

    <Button
        android:id="@+id/bt_mais"
        android:layout_width="96dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#000000"
        android:text="@string/bt_soma"
        android:textColor="#FF5722"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_tres"
        app:layout_constraintTop_toBottomOf="@+id/bt_menos" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="412dp"
        android:layout_height="262dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="right|center"
        android:inputType="textPersonName"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="32pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>